--- a/src/app/shared/product-filter/product-filter.html
+++ b/src/app/shared/product-filter/product-filter.html
@@ -28,10 +28,10 @@
 
     <div class="filter-group">
       <div class="label-row">
-        <label class="group-label">Budget Max</label>
-        <span class="value-tag">{{filters.maxPrice}} Ar</span>
+        <label class="group-label">Prix</label>
       </div>
-      <input type="range" class="mantis-range" min="0" max="2000000" step="10000" [(ngModel)]="filters.maxPrice">
+      <input type="number" name="Text" placeholder="Min">
+      <input type="number" name="Text" placeholder="Max" style="margin-left: 20px;">
     </div>
 
     <div class="filter-group">
