--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -2,7 +2,7 @@
   <nav class="main-header">
 
     <!-- LOGO -->
-    <div class="logo-container">
+    <div class="logo-container" routerLink="/Home" style="cursor: pointer;">
       <mat-icon class="logo-icon">shopping_bag</mat-icon>
       <span class="logo-text">M1P13-Mean <span>Fy-Chalman</span></span>
     </div>
@@ -31,7 +31,7 @@
         </button>
 
         <!-- Panier -->
-        <button class="mantis-action-btn icon-only cart-wrapper" title="Panier">
+        <button class="mantis-action-btn icon-only cart-wrapper" title="Panier" routerLink="/cart">
             <mat-icon>shopping_cart</mat-icon>
             <span class="mantis-badge">3</span>
         </button>
