--- a/src/app/features/product-details/product-details.html
+++ b/src/app/features/product-details/product-details.html
@@ -82,9 +82,9 @@
           </button>
         </div>
 
-        <div class="extra-info">
+        <!-- <div class="extra-info">
           <span><i class="fa-solid fa-truck"></i> Livraison gratuite à partir de 100.000 Ar</span>
-        </div>
+        </div> -->
       </div>
       <div class="row header-content mb-5">
           <app-footer></app-footer>
