--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,21 +88,27 @@ body {
 
 /* HTML: <div class="loader"></div> */
 .loader {
-  --d:22px;
-  width: 4px;
-  height: 4px;
+  width: 50px;
+  aspect-ratio: 1;
   border-radius: 50%;
-  color: #1890ff;
-  box-shadow: 
-    calc(1*var(--d))      calc(0*var(--d))     0 0,
-    calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
-    calc(0*var(--d))      calc(1*var(--d))     0 2px,
-    calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
-    calc(-1*var(--d))     calc(0*var(--d))     0 4px,
-    calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
-    calc(0*var(--d))      calc(-1*var(--d))    0 6px;
-  animation: l27 1s infinite steps(8);
+  border: 8px solid #0000;
+  border-right-color: #1890ff;
+  position: relative;
+  animation: l24 1s infinite linear;
 }
-@keyframes l27 {
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: -8px;
+  border-radius: 50%;
+  border: inherit;
+  animation: inherit;
+  animation-duration: 2s;
+}
+.loader:after {
+  animation-duration: 4s;
+}
+@keyframes l24 {
   100% {transform: rotate(1turn)}
 }
