--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -36,11 +36,9 @@
         <!-- Panier -->
         <button class="mantis-action-btn icon-only cart-wrapper" title="Panier" routerLink="/cart">
             <mat-icon>shopping_cart</mat-icon>
-            <span class="mantis-badge">3</span>
+            <span class="mantis-badge">{{ Orders.length }}</span>
         </button>
-
-    </div>
-
+      </div>
 
   </nav>
 </header>
